User can now try his pin after selecting a product